# rcca_aux

./: .gitignore  cca_train.py  check_the_best_params.py  combine_nested_cv_output.py  get_some_res.py  notes.md  plot_boxplot_comp.py  plot_ind_runs.py  plot_map.py  plot_res.py  plot_res_take_same_val_shuffled.py  pyproject.toml  rcca_cv.py  rcca_run.py  read_au_audio.py  run.sh  run_f.sh  run_f_rs.sh  run_f_suds.sh  run_final_rs.sh  run_final_suds.sh  run_mlp.sh  run_rs.sh  run_suds.sh  run_this.sh  try_mlp_decode_incl_au_vid_as_features.py  try_rcca.py  utils.py
pre/: try_mlp.py  try_rcca.py
